<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Permission controller</string>
    <string name="ok">OK</string>
    <string name="permission_search_keyword">permissions</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="dialog_close">Close</string>
    <string name="available">Available</string>
    <string name="blocked">Blocked</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="uninstall_or_disable">Uninstall or disable</string>
    <string name="app_not_found_dlg_title">App not found</string>
    <string name="grant_dialog_button_deny">Don\u2019t allow</string>
    <string name="grant_dialog_button_deny_and_dont_ask_again">Don\u2019t allow \u0026 don\u2019t ask again</string>
    <string name="grant_dialog_button_no_upgrade">Keep \u201cWhile the app is in use\u201d</string>
    <string name="grant_dialog_button_no_upgrade_one_time">Keep \u201cOnly this time\u201d</string>
    <string name="grant_dialog_button_more_info">More info</string>
    <string name="grant_dialog_button_allow_all">Allow all</string>
    <string name="grant_dialog_button_always_allow_all">Always allow all</string>
    <string name="grant_dialog_button_allow_limited_access">Allow limited access</string>
    <string name="grant_dialog_button_allow_selected_photos">Select photos and videos</string>
    <string name="grant_dialog_button_allow_more_selected_photos">Select more</string>
    <string name="grant_dialog_button_dont_select_more">Don\u2019t select more</string>
    <string name="grant_dialog_button_deny_anyway">Don\u2019t allow anyway</string>
    <string name="grant_dialog_button_dismiss">Dismiss</string>
    <string name="current_permission_template">
        <xliff:g id="current_permission_index" example="1">%1$s</xliff:g> of
        <xliff:g id="permission_count" example="2">%2$s</xliff:g></string>
    <string name="permission_warning_template">Allow
        &lt;b><xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b> to
        <xliff:g id="action" example="do something">%2$s</xliff:g>?</string>
    <string name="permission_add_background_warning_template">Always allow
        &lt;b><xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b> to
        <xliff:g id="action" example="do something">%2$s</xliff:g>?</string>
    <string name="allow_permission_foreground_only">Only while using app</string>
    <string name="allow_permission_always">Always</string>
    <string name="deny_permission_deny_and_dont_ask_again">Don\u2019t allow and don\u2019t ask again</string>
    <string name="permission_revoked_count"><xliff:g id="count" example="2">%1$d</xliff:g> disabled</string>
    <string name="permission_revoked_all">all disabled</string>
    <string name="permission_revoked_none">none disabled</string>
    <string name="grant_dialog_button_allow">Allow</string>
    <string name="grant_dialog_button_allow_always">Allow all the time</string>
    <string name="grant_dialog_button_allow_foreground">While using the app</string>
    <string name="grant_dialog_button_change_to_precise_location">Change to precise location</string>
    <string name="grant_dialog_button_keey_approximate_location">Keep approximate location</string>
    <string name="grant_dialog_button_allow_one_time">Only this time</string>
    <string name="grant_dialog_button_allow_background">Allow all the time</string>
    <string name="grant_dialog_button_allow_all_files">Allow management of all files</string>
    <string name="grant_dialog_button_allow_media_only">Allow access to media files</string>
    <string name="app_permissions_breadcrumb">Apps</string>
    <string name="app_permissions">App permissions</string>
    <string name="unused_apps">Unused apps</string>
    <string name="edit_photos_description">Edit selected photos for this app</string>
    <string name="no_unused_apps">No unused apps</string>
    <string name="zero_unused_apps">0 unused apps</string>
    <string name="review_permission_decisions">Recent permission decisions</string>
    <string name="review_permission_decisions_view_all">View all recent permission decisions</string>
    <string name="review_permission_decisions_empty">No recent permission decisions</string>
    <string name="auto_permission_manager_summary">Manage data access to calendar, call logs, and more</string>
    <string name="granted_permission_decision">You gave <xliff:g id="app_name" example="Google Maps">%1$s</xliff:g> access to <xliff:g id="permission_name" example="contacts">%2$s</xliff:g></string>
    <string name="denied_permission_decision">You denied <xliff:g id="app_name" example="Google Maps">%1$s</xliff:g> access to <xliff:g id="permission_name" example="contacts">%2$s</xliff:g></string>
    <string name="days_ago">{count, plural,
        =0    {Today}
        =1    {1 day ago}
        other {# days ago}
        }</string>
    <string name="app_disable_dlg_positive">Disable app</string>
    <string name="app_disable_dlg_text">If you disable this app, Android and other apps may no longer function as intended. Keep in mind, you can\u2019t delete this app since it came pre-installed on your device. By disabling, you turn this app off and hide it on your device.</string>
    <string name="app_permission_manager">Permission manager</string>
    <string name="never_ask_again">Don\'t ask again</string>
    <string name="no_permissions">No permissions</string>
    <string name="additional_permissions">Additional permissions</string>
    <string name="app_permissions_info_button_label">Open app info</string>
    <string name="additional_permissions_more">{count, plural,
        =1      {# more}
        other   {# more}
    }</string>
    <string name="old_sdk_deny_warning">This app was designed for an older version of Android. Denying permission may cause it to no longer function as intended.</string>
    <string name="storage_supergroup_warning_allow">This app was designed for an older version of Android. If you allow this permission, then access to all storage (including photos, videos, music, audio, and other files) will be allowed.</string>
    <string name="storage_supergroup_warning_deny">This app was designed for an older version of Android. If you deny this permission, then access to all storage (including photos, videos, music, audio, and other files) will be denied.</string>
    <string name="default_permission_description">perform an unknown action</string>
   <string name="app_permissions_group_summary"><xliff:g id="count" example="10">%1$d</xliff:g> of <xliff:g id="count" example="10">%2$d</xliff:g> apps allowed</string>
    <string name="app_permissions_group_summary2"><xliff:g id="count" example="10">%1$d</xliff:g>/<xliff:g id="count" example="10">%2$d</xliff:g> apps allowed</string>
    <string name="menu_show_system">Show system</string>
    <string name="menu_hide_system">Hide system</string>
    <string name="menu_show_7_days_data">Show 7 days</string>
    <string name="menu_show_24_hours_data">Show 24 hours</string>
    <string name="manage_permission">Manage permission</string>
   <string name="no_apps">No apps</string>
   <string name="location_settings">Location Settings</string>
   <string name="location_warning"><xliff:g id="app_name" example="Package Installer">%1$s</xliff:g> is a provider of location services for this device. Location access can be modified from location settings.</string>
   <string name="system_warning">If you deny this permission, basic features of your device may no longer function as intended.</string>
    <string name="deny_read_media_visual_warning">This app was designed for an older version of Android. If you deny this app access to photos &amp; videos, access to music &amp; other audio will also be denied.</string>
    <string name="deny_read_media_aural_warning">This app was designed for an older version of Android. If you deny this app access to music &amp; other audio, access to photos &amp; videos will also be denied.</string>
    <string name="cdm_profile_revoke_warning">If you deny this permission, some features of your device managed by this app may no longer function as intended.</string>
   <string name="permission_summary_enforced_by_policy">Enforced by policy</string>
   <string name="permission_summary_disabled_by_policy_background_only">Background access disabled by policy</string>
   <string name="permission_summary_enabled_by_policy_background_only">Background access enabled by policy</string>
   <string name="permission_summary_enabled_by_policy_foreground_only">Foreground access enabled by policy</string>
    <string name="permission_summary_enabled_system_fixed">Device requires this permission to operate</string>
    <string name="app_permission_button_allow">Allow</string>
    <string name="app_permission_button_allow_always">Allow all the time</string>
    <string name="app_permission_button_allow_foreground">Allow only while using the app</string>
    <string name="app_permission_button_ask">Ask every time</string>
    <string name="app_permission_button_deny">Don\u2019t allow</string>
    <string name="app_permission_button_allow_limited_access">Allow limited access</string>
    <string name="precise_image_description">Precise location</string>
    <string name="approximate_image_description">Approximate location</string>
    <string name="app_permission_location_accuracy">Use precise location</string>
    <string name="app_permission_location_accuracy_subtitle">When precise location is off, apps can access your approximate location</string>
    <string name="app_permission_header"><xliff:g id="perm" example="location">%1$s</xliff:g> access for this app</string>
    <string name="app_permission_footer_app_permissions_link">See all <xliff:g id="app" example="Maps">%1$s</xliff:g> permissions</string>
    <string name="app_permission_footer_permission_apps_link">See all apps with this permission</string>
    <string name="app_permission_footer_special_file_access">If you allow management of all files, this app can access, modify, and delete any files in common storage on this device or connected storage devices. The app may access files without asking you.</string>
    <string name="permgrouprequest_finelocation_imagetext">Precise</string>
    <string name="permgrouprequest_coarselocation_imagetext">Approximate</string>
    <string name="exempt_info_label"><xliff:g id="app_name" example="Gmail">%1$s</xliff:g> is protected by Android. Because your data is processed on this device, this app’s permission usage isn’t shown on your privacy dashboard. </string>
    <string name="privacy_controls_title">Privacy controls</string>
    <string name="camera_toggle_title">Camera access</string>
    <string name="mic_toggle_title">Microphone access</string>
    <string name="perm_toggle_description">For apps and services</string>
    <string name="mic_toggle_description">For apps and services. If this setting is off, microphone data may still be shared when you call an emergency number.</string>
    <string name="location_settings_subtitle">See apps and services that have access to location</string>
    <string name="show_clip_access_notification_title">Show clipboard access</string>
    <string name="show_clip_access_notification_summary">Show a message when apps access text, images, or other content you\u2019ve copied</string>
    <string name="show_password_title">Show passwords</string>
    <string name="show_password_summary">Display characters briefly as you type</string>
    <string name="app_permission_rationale_message">Data safety</string>
    <string name="app_location_permission_rationale_title">Location data may be shared</string>
    <string name="app_location_permission_rationale_subtitle">This app stated it may share your location data with third parties</string>
</resources>