<!--
  ~ Copyright (C) 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="privacy_controls_page"
    android:title="@string/privacy_controls_title">

    <!-- Camera toggle -->
    <com.android.permissioncontroller.safetycenter.ui.ClickableDisabledSwitchPreference
        android:key="privacy_camera_toggle"
        android:title="@string/camera_toggle_title"
        android:summary="@string/perm_toggle_description" />

    <!-- Microphone toggle -->
    <com.android.permissioncontroller.safetycenter.ui.ClickableDisabledSwitchPreference
        android:key="privacy_mic_toggle"
        android:title="@string/mic_toggle_title"
        android:summary="@string/mic_toggle_description"/>

    <!-- Clipboard access notifications toggle -->
    <com.android.permissioncontroller.safetycenter.ui.ClickableDisabledSwitchPreference
        android:key="show_clip_access_notification"
        android:title="@string/show_clip_access_notification_title"
        android:summary="@string/show_clip_access_notification_summary" />

    <!-- Show password toggle-->
    <com.android.permissioncontroller.safetycenter.ui.ClickableDisabledSwitchPreference
        android:key="show_password"
        android:title="@string/show_password_title"
        android:summary="@string/show_password_summary"/>

    <!-- Location link -->
    <Preference
        android:key="privacy_location_access"
        android:title="@string/location_settings"
        android:summary="@string/location_settings_subtitle"/>

</PreferenceScreen>
